fix flickering

--- a/src/App.css
+++ b/src/App.css
@@ -114,7 +114,7 @@
   flex-direction: column;
   justify-content: center;
   scroll-snap-align: start;
-  scroll-snap-stop: always;
+  scroll-snap-stop: normal;
   overflow: hidden;
   box-sizing: border-box;
   padding: 8px 0 12px;
